syntax = "proto3";

option go_package = "github.com/pyrolass/grpc-microservice-go/tolling/types";



service DriverMessageService{
    rpc InsertDriverLog(InsertDriverLogRequest) returns (InsertDriverLogResponse);
}

service DriverWriteService{
    rpc InsertDriverLogDB(InsertLogListRequest) returns (InsertDriverLogResponse);
}


message None{}


message InsertDriverLogRequest{
    int32 DriverId = 1;
    double Lat = 2;
    double Lon = 3;
}

message InsertLogListRequest{
    repeated InsertDriverLogRequest logs = 1;
}

message InsertDriverLogResponse {
    bool success = 1; 
   
  }